fix spacing
on the home page

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ body{
     width:250px;
     display:block;
     color:red;
-    top:3px;
 }
 .log{
     position:relative;
@@ -31,6 +30,6 @@ body{
     width: 0px;
     display:block;
     position:relative;
-    bottom: 41px;
+    bottom: 38px;
     color:deepskyblue;
 }
